--- a/Backend/PPrePorter.Core/PPrePorter.Core.csproj
+++ b/Backend/PPrePorter.Core/PPrePorter.Core.csproj
@@ -4,6 +4,12 @@
     <ProjectReference Include="..\PPrePorter.Domain\PPrePorter.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.4" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="9.0.4" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.4" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
