--- a/Backend/PPrePorter.Infrastructure/PPrePorter.Infrastructure.csproj
+++ b/Backend/PPrePorter.Infrastructure/PPrePorter.Infrastructure.csproj
@@ -8,11 +8,13 @@
   <ItemGroup>
     <PackageReference Include="EPPlus" Version="5.8.14" />
     <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.3.0" />
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="6.0.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.4">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="System.Data.SqlClient" Version="4.9.0" />
   </ItemGroup>
 
   <PropertyGroup>
