added azure project

--- a/Backend/PPrePorter.API/PPrePorter.API.csproj
+++ b/Backend/PPrePorter.API/PPrePorter.API.csproj
@@ -22,6 +22,7 @@
     <ProjectReference Include="..\PPrePorter.Infrastructure\PPrePorter.Infrastructure.csproj" />
     <ProjectReference Include="..\PPrePorter.SemanticLayer\PPrePorter.SemanticLayer.csproj" />
     <ProjectReference Include="..\PPrePorter.DailyActionsDB\PPrePorter.DailyActionsDB.csproj" />
+    <ProjectReference Include="..\PPrePorter.AzureServices\PPrePorter.AzureServices.csproj" />
   </ItemGroup>
 
 </Project>
