--- a/Backend/PPrePorter.API/appsettings.json
+++ b/Backend/PPrePorter.API/appsettings.json
@@ -9,7 +9,7 @@
   "ConnectionStrings": {
     "Redis": "localhost:6379,abortConnect=false",
     "DailyActionsDB_Local": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=DailyActionsDB;Integrated Security=True;Connect Timeout=30;",
-    "DailyActionsDB": "data source=185.64.56.157;initial catalog=DailyActionsDB;persist security info=True;user id={azurevault:progressplaymcp-kv:DailyActionsDB--Username};password={azurevault:progressplaymcp-kv:DailyActionsDB--Password};TrustServerCertificate=True;",
+    "DailyActionsDB": "data source=185.64.56.157;initial catalog=DailyActionsDB;persist security info=True;user id={azurevault:progressplaymcp-kv:DailyActionsDB--Username};password={azurevault:progressplaymcp-kv:DailyActionsDB--Password};TrustServerCertificate=True;MultipleActiveResultSets=True;",
     "PPRePorterDB": "Server=tcp:progressplay-server.database.windows.net,1433;Initial Catalog=ProgressPlayDB;Persist Security Info=False;User ID={azurevault:progressplaymcp-kv:ProgressPlayDBAzure--Username};Password={azurevault:progressplaymcp-kv:ProgressPlayDBAzure--Password};MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "JwtSettings": {
