--- a/Backend/PPrePorter.API/appsettings.Development.json
+++ b/Backend/PPrePorter.API/appsettings.Development.json
@@ -19,5 +19,12 @@
   "AppSettings": {
     "EnableAuthentication": false
   },
+  "RateLimitingSettings": {
+    "Enabled": true,
+    "MaxRequests": 300,
+    "WindowSeconds": 60,
+    "MaxFailedLoginAttempts": 5,
+    "LockoutDurationMinutes": 5
+  },
   "UseRealAzureKeyVault": true
 }
