--- a/Backend/PPrePorter.API/appsettings.json
+++ b/Backend/PPrePorter.API/appsettings.json
@@ -44,5 +44,12 @@
   },
   "AppSettings": {
     "EnableAuthentication": false
+  },
+  "RateLimitingSettings": {
+    "Enabled": true,
+    "MaxRequests": 100,
+    "WindowSeconds": 60,
+    "MaxFailedLoginAttempts": 5,
+    "LockoutDurationMinutes": 15
   }
 }
