--- a/Backend/PPrePorter.Tests/PPrePorter.Tests.csproj
+++ b/Backend/PPrePorter.Tests/PPrePorter.Tests.csproj
@@ -10,12 +10,21 @@
   <ItemGroup>
     <PackageReference Include="coverlet.collector" Version="6.0.2" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0" />
+    <PackageReference Include="Moq" Version="4.20.70" />
     <PackageReference Include="xunit" Version="2.9.2" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.8.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="9.0.4" />
   </ItemGroup>
 
   <ItemGroup>
     <Using Include="Xunit" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\PPrePorter.API\PPrePorter.API.csproj" />
+    <ProjectReference Include="..\PPrePorter.Core\PPrePorter.Core.csproj" />
+    <ProjectReference Include="..\PPrePorter.Infrastructure\PPrePorter.Infrastructure.csproj" />
+    <ProjectReference Include="..\PPrePorter.Domain\PPrePorter.Domain.csproj" />
   </ItemGroup>
 
 </Project>
