--- a/Backend/PPrePorter.API/Properties/launchSettings.json
+++ b/Backend/PPrePorter.API/Properties/launchSettings.json
@@ -8,7 +8,10 @@
       "launchUrl": "swagger",
       "applicationUrl": "http://localhost:5229",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "AZURE_TENANT_ID": "your-actual-tenant-id",
+        "AZURE_CLIENT_ID": "your-actual-client-id",
+        "AZURE_CLIENT_SECRET": "your-actual-client-secret"
       }
     },
     "https": {
@@ -18,7 +21,10 @@
       "launchUrl": "swagger",
       "applicationUrl": "https://localhost:7075;http://localhost:5229",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "AZURE_TENANT_ID": "your-actual-tenant-id",
+        "AZURE_CLIENT_ID": "your-actual-client-id",
+        "AZURE_CLIENT_SECRET": "your-actual-client-secret"
       }
     }
   }
