--- a/Backend/PPrePorter.API/appsettings.Development.json
+++ b/Backend/PPrePorter.API/appsettings.Development.json
@@ -3,9 +3,9 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning",
-      "PPrePorter.Core.Services.GlobalCacheService": "Debug",
-      "PPrePorter.DailyActionsDB.Services.DailyActionsService": "Debug",
-      "Microsoft.Extensions.Caching": "Debug"
+      "PPrePorter.Core.Services.GlobalCacheService": "Warning",
+      "PPrePorter.DailyActionsDB.Services.DailyActionsService": "Information",
+      "Microsoft.Extensions.Caching": "Warning"
     },
     "Console": {
       "FormatterName": "simple",
