--- a/Backend/PPrePorter.API/appsettings.json
+++ b/Backend/PPrePorter.API/appsettings.json
@@ -3,8 +3,8 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning",
-      "PPrePorter.Core.Services.GlobalCacheService": "Debug",
-      "PPrePorter.DailyActionsDB.Services.DailyActionsService": "Debug"
+      "PPrePorter.Core.Services.GlobalCacheService": "Warning",
+      "PPrePorter.DailyActionsDB.Services.DailyActionsService": "Information"
     },
     "Console": {
       "FormatterName": "json",
